Media queries avanzate

--- a/Media Queries/CodingTeoria/assets/style.css
+++ b/Media Queries/CodingTeoria/assets/style.css
@@ -10,6 +10,19 @@
     gap: 10px;
 }
 
+.form {
+    margin: 0 auto;
+}
+
+.form input {
+    padding: 5px 5px;
+}
+
+.form button {
+    padding: 5px 25px;
+}
+
+
 /* MEDIA QUERY MOBILE DA 320PX IN POI*/
 @media screen and (min-width: 320px) {
     .container {
@@ -47,5 +60,93 @@
     .container {
         width: 100%;
     }
-
 }
+
+
+
+/* MEDIA QUERIES AVANZATE (HOVER-POINTER E UTILIZZO AND/OR/NOT) */
+
+/* HOVER (Accetta none e hover) */
+
+@media screen and (hover: hover) {
+      /* RILEVA DISPOSITIVI CON PUNTATORE */
+    .form input:focus {
+        background-color: antiquewhite;
+        color: black;
+    }
+    
+    .form button:hover {
+        background-color: bisque;
+        font-weight: 800;
+    }
+  }
+
+  @media screen and (hover: none) {
+    /* RILEVA DISPOSITIVI SENZA PUNTATORE ES: SMARTPHONE */
+    .form {
+      /* regole css */
+    }
+}
+  
+  
+  /* POINTER  (Accetta none/coarse/fine) */
+  
+  @media screen and (pointer:coarse) {
+    /* RILEVA DISPOSITIVI CON PUNTATORE TIPO SMARTTV/GAMING CONSOLE */
+  }
+   
+  @media screen and (pointer:none) {
+    /* RILEVA DISPOSITIVI SENZA PUNTATORE */
+    body {
+        background-color: aqua;
+      }
+  }
+  
+   @media screen and (pointer:fine) {
+       /* RILEVA PUNTATORI DI PRECISIONE TIPO MOUSE E PEN DRIVE TABLET */
+      body {
+        background-color: rgb(0, 255, 34);
+      }
+  }  
+  
+   
+  /* COMBINAZIONI PIU USATE TRA HOVER E POINTER */
+  /* ------------------------------------- */
+  /* NONE - COARSE => Smartphone && Touchscreen */
+  /* NONE - FINE  => Stylus based screen */
+  /* HOVER - COARSE => SmartTV & Console */
+  /* HOVER - FINE => Desktop & LapTop & Touchpad */
+  
+  
+  /* MEDIA QUERY OR */
+  @media screen and (max-width: 320px), (orientation: landscape) {
+    .container {
+      background-color: bisque;
+    }
+  }
+  
+  
+  /* MEDIA QUERY NOT */
+  
+  @media not (max-width: 320px) {
+    .container {
+      background-color: white;
+    }
+  }
+
+
+
+  /* PUNTI INTERRUZIONE MEDIA QUERY STANDARD
+
+    For Mobile Devices – 320px — 480px
+    iPads and Tablets – 481px — 768px
+    Laptops and small screen – 769px — 1024px
+    Large screens and Desktops – 1025px — 1200px
+    TV and Extra Large Screens – 1201px and more 
+    
+    */
+  
+  
+  
+  
+  
