--- a/CSSPositioning/Esercizio/assets/css/style.css
+++ b/CSSPositioning/Esercizio/assets/css/style.css
@@ -276,21 +276,6 @@ footer a {
   /* MEDIA QUERIES PER SCHERMI DA 1200PX IN SU */
 @media screen and (min-width: 1200px) {
 
-  p,
-  ol, 
-  li {
-      font-size: 1.8rem;
-  }
-
-  h1 {
-      font-size: 5.5rem;
-  }
-
-  h2 {
-      font-size: 2.2rem;
-      font-weight: 700;
-  }
-
     body {
         line-height: 2;
     }
@@ -399,14 +384,67 @@ footer a {
 
   /*---------------------- CCS AGGIUNTO EX POSITIONING ---------------------*/
 
+  p,
+  ol, 
+  li {
+      font-size: 1.8rem;
+  }
+
+  h1 {
+      font-size: 5.5rem;
+  }
+
+  h2 {
+      font-size: 2.2rem;
+      font-weight: 700;
+  }
+
+
+
+  @media screen and (max-width: 576px) {
+    p,
+    ol, 
+    li {
+        font-size: 1.6rem;
+    }
+  
+    h1 {
+        font-size: 3.8rem;
+    }
+  
+    h2 {
+        font-size: 2.0rem;
+        font-weight: 700;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+  
+    h1 {
+        font-size: 2.6rem;
+    }
+  
+  }
+
   header {
     position: sticky;
     top: 0;
     z-index: 10;
   }
 
-  article img {
+  .imgLeft {
     float: left;
+    margin-right: 20px;
+    border: 4px solid #00a0c6;
+    outline: 4px solid #a02571;
+    padding: 3px;
+  }
+
+  /* clearfix */
+  .imgwrapper::after {
+    content: "";
+    display: table;
+    clear: both;
   }
 
   /* sottolineatura */
@@ -419,7 +457,7 @@ footer a {
   h1 img {
     z-index: -1;
     position: absolute;
-    top: 80%;
+    top: 75%;
     left: 0;
     right: 0;
     width: 100%;
