--- a/FlexBox/CodingTeoria/assets/style.css
+++ b/FlexBox/CodingTeoria/assets/style.css
@@ -1,25 +1,77 @@
 .container {
-    height: 250px; 
-    margin: 0 auto;
-    gap: 10px;
+   background-color: antiquewhite;
+}
+
+header {
+    width: 100%;
     display: flex;
-    background-color: aquamarine;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.children {
-    /* flex-grow: 1; */
-    flex-basis: 60%;
-    border: 1px solid black;
-    margin: 5px;
-    background-color: blueviolet;
-    flex-grow: 2;
+.logo {
+    width: 75px;
+    height: 75px;
+    background-color: brown;
 }
 
-.children2 {
-    /* flex-grow: 2; */
-    align-self: flex-end;
-    border: 1px solid black;
-    margin: 5px;
+.brand {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.menu ul li {
+    list-style: none;
+    display: inline;
+    margin-right: 30px
+}
+
+
+
+.image {
+    min-width: 250px;
+    height: 150px;
     background-color: blueviolet;
-    flex-grow: 1;
+}
+
+main {
+    background-color: cadetblue;
+    padding: 20px;
+}
+
+.article {
+    display: flex;
+    gap: 30px;
+}
+
+/* .articlereverse {
+    display: flex;
+    gap: 30px;
+} */
+
+
+
+/* FOOTER */
+footer {
+    background-color: chocolate;
+    display: flex;
+    justify-content: center;
+}
+
+footer div p {
+    font-size: 2rem;
+    color: white;
+    margin: 10px;
+}
+
+
+@media screen and (max-width: 567px) {
+    .article {
+        flex-direction: column;
+    }
+
+    .reverse p {
+        order: 1;
+    }
 }
