--- a/UNIT2/Week2/Sass1/Teoria/assets/scss/style.scss
+++ b/UNIT2/Week2/Sass1/Teoria/assets/scss/style.scss
@@ -147,6 +147,7 @@ $paddingSizes: (
     }
 }
 
+//RICHIAMO IL MIXIN PER CREARE DELLE CLASSI CON PADDING DINAMICO
 @include creaPaddingDinamico(inline);
 
 //UTILIZZO MIXIN CON PARAMETRI SEMPLICE
